--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <div id="gameOver">Game Over!<br><span id="finalScore"></span><br><button onclick="location.reload()">Restart</button></div>
   </div>
   <div id="score">Score: 0</div>
-  <div id="author">Author: Akagamixyz | Discord: Akagami</div>
+  <div id="author">Author: Akagamixyz | Discord: 0xxAkagami</div>
 
   <script>
     const game = document.getElementById("game");
